# LaboratoryWork9

./: .gitignore  PROMT_LOG.md
.github/workflows/: release.yml
task_b1/: client.py  go.mod  main.go  main_test.go  task_b1_test.py
task_b3/: Cargo.toml  pyproject.toml  test_taskb3.py
task_b3/.github/workflows/: release.yml
task_b3/src/: lib.rs
task_b3/tests/: test_main.py
task_m3/: go.mod  main.go  main_test.go  task3.py
task_m5/: go.mod  main.go  main_test.go  task5.py
task_m8/: Cargo.toml  pyproject.toml  task8.py
task_m8/src/: lib.rs
